# witaker-clipboard-server

./: BUILD.md  Makefile  setup.cfg
src/witaker/clipboardserver/: __init__.py  clipboard_server.py  clipboard_server_main.py  clipboard_server_run.py  clipboard_util.py
src/witaker/clipboardserver/gui/: clipboard_server_app.py  clipboard_server_main.py
