[metadata]
name = witaker-clipboard-server
version = 0.2.0
license = apache-2.0
license_file = LICENSE
description = A utility for copy and paste in the browser without requiring focus
description_file=README.md
author = "Cathal Mc Ginley",
author_email = "cathal.pypi@gnostai.org",
url="https://github.com/cathalmcginley",
download_url="https://github.com/cathalmcginley/witaker-clipboard-server/archive/v_01.tar.gz",
keywords =
    browser
    copy
    focus
install_requires = 
    Kivy >=2.1.0
    xerox >=0.4.1
    flask >=2.0.3
    jsons >=1.6.1
    flask-cors >=3.0.10
    eventlet >=0.33.0
classifiers=[
    Development Status :: 5 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache License 2.0
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.package_data]
* = *.png
[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    witaker-clipboard-server = witaker.clipboardserver:clipboard_server_cli_main
gui_scripts = 
    witaker-clipboard-server-gui = witaker.clipboardserver.gui:clipboard_server_gui_main
